--- a/AzurePim/Pages/Index.cshtml
+++ b/AzurePim/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">PIM</h1>
+    <h1 class="display-4">Privileged Identity Management</h1>
     <p>Azure PIM with groups</p>
 </div>
